{{$NEXT}}

    - Better error messages when using Carp in Hashbase init()
    - Document 2 methods on Events
    - Fix #17 (typo fix in docs)

0.000042  2016-04-15 13:17:21-07:00 America/Los_Angeles

    - Let TAP render generic events
    - Add the no_display method to the Event API
    - Improve T2_FORMATTER parsing

0.000041  2016-04-13 20:21:38-07:00 America/Los_Angeles

    - Do not use custom formatter in sensitive tests

0.000040  2016-04-05 11:09:52-07:00 America/Los_Angeles

    - Track subtest info inside subtest events

0.000039  2016-04-04 21:32:08-07:00 America/Los_Angeles

    - Formatters can pick buffered subtest behavior
    - Add sets_plan() method to event base class
    - Add diagnostics() method to event base class

0.000038  2016-04-03 15:41:39-07:00 America/Los_Angeles

    - Add summary() method to event base class

0.000037  2016-04-01 08:41:22-07:00 America/Los_Angeles

    - Change Formatter to load Test2::API on demand
    - Add test to insure Test2::API is not loaded by some modules

0.000036  2016-03-28 11:44:53-07:00 America/Los_Angeles

    - Do not warn if unimportant INIT block cannot be run
    - Change how TAP duplicates IO handles, use 3 arg form of open

0.000035  2016-03-25 09:41:46-07:00 America/Los_Angeles (TRIAL RELEASE)

    - More fixes for #16
    - Add some END block manipulation for #16
    - Turn off depth checking on older perls (for #16)

0.000034  2016-03-24 10:32:57-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix depth bug introduced in the last trial

0.000033  2016-03-24 08:39:51-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Better fox for #16 (workaround for caller() in END bug)
    - Put test for #16 in regular testing dir as new fix is more stable

0.000032  2016-03-23 23:54:40-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix #16 (workaround for caller() in END bug)

0.000031  2016-03-20 13:45:43-07:00 America/Los_Angeles

    - Regenerate README files