@@ -526,10 +526,6 @@ __END__
 
 Test2::API - Primary interface for writing Test2 based testing tools.
 
-=head1 EXPERIMENTAL RELEASE
-
-This is an experimental release. Using this right now is not recommended.
-
 =head1 ***INTERNALS NOTE***
 
 B<The internals of this package are subject to change at any time!> The public
@@ -1246,7 +1242,7 @@ F<http://github.com/Test-More/Test2/>.
 
 =head1 COPYRIGHT
 
-Copyright 2015 Chad Granum E<lt>exodist7@gmail.comE<gt>.
+Copyright 2016 Chad Granum E<lt>exodist7@gmail.comE<gt>.
 
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
