@@ -106,10 +106,6 @@ __END__
 Test2::API::Stack - Object to manage a stack of L<Test2::Hub>
 instances.
 
-=head1 EXPERIMENTAL RELEASE
-
-This is an experimental release. Using this right now is not recommended.
-
 =head1 ***INTERNALS NOTE***
 
 B<The internals of this package are subject to change at any time!> The public
@@ -213,7 +209,7 @@ F<http://github.com/Test-More/Test2/>.
 
 =head1 COPYRIGHT
 
-Copyright 2015 Chad Granum E<lt>exodist7@gmail.comE<gt>.
+Copyright 2016 Chad Granum E<lt>exodist7@gmail.comE<gt>.
 
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
