@@ -17,10 +17,6 @@ __END__
 Test2::Hub::Interceptor::Terminator - Exception class used by
 Test2::Hub::Interceptor
 
-=head1 EXPERIMENTAL RELEASE
-
-This is an experimental release. Using this right now is not recommended.
-
 =head1 SOURCE
 
 The source code repository for Test2 can be found at
@@ -44,7 +40,7 @@ F<http://github.com/Test-More/Test2/>.
 
 =head1 COPYRIGHT
 
-Copyright 2015 Chad Granum E<lt>exodist7@gmail.comE<gt>.
+Copyright 2016 Chad Granum E<lt>exodist7@gmail.comE<gt>.
 
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
