@@ -87,10 +87,6 @@ __END__
 
 Test2::IPC - Turn on IPC for threading or forking support.
 
-=head1 EXPERIMENTAL RELEASE
-
-This is an experimental release. Using this right now is not recommended.
-
 =head1 SYNOPSIS
 
 You should C<use Test2::IPC;> as early as possible in your test file. If you
@@ -132,7 +128,7 @@ F<http://github.com/Test-More/Test2/>.
 
 =head1 COPYRIGHT
 
-Copyright 2015 Chad Granum E<lt>exodist7@gmail.comE<gt>.
+Copyright 2016 Chad Granum E<lt>exodist7@gmail.comE<gt>.
 
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
